delete animation and fix bug drawer

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1866,11 +1866,12 @@ input:-webkit-autofill {
     height: auto;
     display: block;
     padding: 35px;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(20px);
     border-bottom: 1px solid #ccc;
     transform: translateY(-100%);
     transition: all 0.3s;
+    z-index: 100;
   }
   .drawer .item-link {
     display: block;
@@ -1920,6 +1921,7 @@ input:-webkit-autofill {
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(20px);
     transition: all 0.3s;
+    z-index: 100;
   }
   .hero__inner .title {
     font-size: 4.2rem !important;
