--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -40,6 +40,9 @@
         transform: translateY(-100%);
         transition: all 0.3s;
         z-index: 100;
+        .navbar {
+            max-width: 100%;
+        }
         .item-link {
             display: block;
             color: #fff;
